put scare quotes around the categories of G-equivariant quasicoherent sheaves in Lecture 1.4

--- a/mo.tex
+++ b/mo.tex
@@ -462,7 +462,7 @@ Given $A$--comodules $M$ and $N$, their cotensor product is defined by the coequ
 Given a map $f \co A \to B$ of Hopf $k$--algebras, the induced adjunction $f^* \dashv f_*$ is given at the level of comodules by
 \begin{center}
 \begin{tikzcd}
-\CatOf{QCoh}_{(\Spec k, \Spec A)} \arrow[shift left=0.2em]{r}{f^*} \arrow[-,double]{d} & \CatOf{QCoh}_{(\Spec k, \Spec B)} \arrow[shift left=0.2em]{l}{f_*} \arrow[-,double]{d} \\
+\text{``}\CatOf{QCoh}_{(\Spec k, \Spec A)}\text{''} \arrow[shift left=0.2em]{r}{f^*} \arrow[-,double]{d} & \text{``}\CatOf{QCoh}_{(\Spec k, \Spec B)}\text{''} \arrow[shift left=0.2em]{l}{f_*} \arrow[-,double]{d} \\
 \CatOf{Comodules}_A \arrow[shift left=0.2em]{r}{M \mapsto M} & \CatOf{Comodules}_B \arrow[shift left=0.2em]{l}{N \cotensor_B A \mapsfrom N}.
 \qed
 \end{tikzcd}
@@ -475,7 +475,7 @@ The formula for $f_* N$ is what one would guess from the formula for pushforward
 
 \noindent As an example application, cotensoring gives rise to a concise description of what it means to be a comodule map:
 
-\begin{lemma}[{\cite[A1.1.6b]{RavenelGreenBook}}]
+\begin{lemma}[{\cite[Lemma A1.1.6b]{RavenelGreenBook}}]
 Let $M$ and $N$ be $A$--comodules with $M$ projective as a $k$--module.  Then there is an equivalence \[\CatOf{Comodules}_A(M, N) = \CatOf{Modules}_k(M, k) \cotensor_A N. \qed\]
 \end{lemma}
 
