--- a/main.tex
+++ b/main.tex
@@ -110,6 +110,7 @@
 % \newcommand{\bigcirc}{\mathop{\Huge \mathlarger{\mathlarger{\circ}}}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
+\newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
 \newcommand{\CatOf}[1]{\mathsf{#1}}
 \newcommand{\ps}[1]{\llbracket{#1}\rrbracket}
 \newcommand{\moduli}[1]{\mathcal{M}_{\mathbf{#1}}}
