--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,7 @@
 \newcommand{\CatOf}[1]{\mathsf{#1}}
 \newcommand{\ps}[1]{\llbracket{#1}\rrbracket}
 \newcommand{\moduli}[1]{\mathcal{M}_{\mathbf{#1}}}
-\newcommand{\OS}[2]{\smash{\underline{#1}}_{#2}}
+\newcommand{\OS}[2]{\underline{\smash{#1}}_{#2}}
 \newcommand{\InternalHom}[1]{\operatorname{\underline{\smash{\CatOf{#1}}}}}
 \newcommand{\InternalAut}{\operatorname{\underline{\smash{\operatorname{Aut}}}}}
 \newcommand{\sheaf}[1]{\mathcal{#1}}
